--- a/VS_anicolus_Webservices/app/src/main/res/layout/activity_rest_client.xml
+++ b/VS_anicolus_Webservices/app/src/main/res/layout/activity_rest_client.xml
@@ -10,4 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ch.ethz.inf.vs.a2.anicolus.webservices.REST_client">
 
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/temp" />
 </RelativeLayout>
