--- a/VS_anicolus_Webservices/app/src/main/res/layout/activity_rest_client.xml
+++ b/VS_anicolus_Webservices/app/src/main/res/layout/activity_rest_client.xml
@@ -10,11 +10,31 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ch.ethz.inf.vs.a2.anicolus.webservices.REST_client">
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
+    <Spinner
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/temp" />
+        android:layout_marginTop="24dp"
+        android:id="@+id/spinner"
+        android:entries="@array/methods" />
+
+    <Button
+        android:text="get temeperature"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/temp"
+        android:layout_marginTop="68dp"
+        android:id="@+id/button"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="temperature will show here"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/temp"
+        android:layout_marginTop="67dp"
+        android:layout_below="@+id/spinner"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
