--- a/VS_anicolus_Webservices/app/src/main/res/layout/activity_soap_client.xml
+++ b/VS_anicolus_Webservices/app/src/main/res/layout/activity_soap_client.xml
@@ -10,27 +10,29 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ch.ethz.inf.vs.a2.anicolus.webservices.SOAP_client">
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/temp" />
-
     <Button
-        android:text="Manual SOAP"
+        android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/button1" />
+        android:text="Manual SOAP" />
 
     <Button
-        android:text="SOAP Library"
+        android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button1"
         android:layout_centerHorizontal="true"
-        android:id="@+id/button2" />
+        android:text="SOAP Library" />
+
+    <TextView
+        android:id="@+id/temp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/button2"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="48dp"
+        android:text="TextView" />
 </RelativeLayout>
