--- a/VS_anicolus_Webservices/app/src/main/res/layout/activity_soap_client.xml
+++ b/VS_anicolus_Webservices/app/src/main/res/layout/activity_soap_client.xml
@@ -22,17 +22,15 @@
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="SOAP Library"
         android:layout_below="@+id/button1"
-        android:layout_centerHorizontal="true"
-        android:text="SOAP Library" />
+        android:layout_alignParentStart="true" />
 
     <TextView
-        android:id="@+id/temp"
+        android:text="TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/button2"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="48dp"
-        android:text="TextView" />
+        android:id="@+id/temp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
