--- a/VS_anicolus_Webservices/app/src/main/res/layout/activity_soap_client.xml
+++ b/VS_anicolus_Webservices/app/src/main/res/layout/activity_soap_client.xml
@@ -27,7 +27,7 @@
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:text="TextView"
+        android:text="temperature will show here"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/temp"
