Task 3 finished. Working perfectly on Emulator (port forwarding with telnet)

--- a/VS_anicolus_Webservices/app/src/main/res/values/ids.xml
+++ b/VS_anicolus_Webservices/app/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item name="btnStart" type="id" />
     <item name="btnStop" type="id" />
     <item name="serviceState" type="id" />
+    <item name="address" type="id" />
 </resources>
