--- a/VS_anicolus_Webservices/app/src/main/res/layout/activity_rest_server.xml
+++ b/VS_anicolus_Webservices/app/src/main/res/layout/activity_rest_server.xml
@@ -33,4 +33,11 @@
         android:layout_below="@+id/btnStart"
         android:layout_alignParentStart="true" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@id/address"
+        android:layout_below="@+id/btnStop"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
